@@ -1,7 +1,7 @@
 {
   "name": "Rabbid",
   "description": "Recherche- und Analyse-Basis für Belegstellen in Diskursen",
-  "version": "0.5.1",
+  "version": "0.5.2",
   "repository": {
     "type": "git",
     "url": "https://github.com/KorAP/Rabbid.git"
